--- a/sections/Sensors/SensorTest.tex
+++ b/sections/Sensors/SensorTest.tex
@@ -68,7 +68,7 @@ turret.\nl
 \subsubsection{Using Blinders}
 At first when testing the ultrasonic sensors, it was determined that the
 sensor's ability to accurately measure the distance was subject to interferance
-by the surroundings. In effect this vastly reduced the maximum distace of the
+by the surroundings. In effect this vastly reduced the maximum distance of the
 sensor, and as such, a lot of different attempts were made in order to solve
 this problem. As this was done as a part of the initial design phase, the
 different turret designs were not recorded. These tests resulted in the
@@ -101,7 +101,7 @@ Landscape}{Results with a unshielded sensor and a A4 Paper}{unshieldedTestPaper}
 
 
 As seen in \autoref{graph:shieldedTestBox}, \autoref{graph:unshieldedTestBox},
-\autoref{graph:unshieldedTestPaper} and \autoref{graph:shieldedTestPaper} the
+\autoref{graph:shieldedTestPaper} and \autoref{graph:unshieldedTestPaper} the
 sensor was able to determine the distance with better precision when it is
 shielded and the object was in the landscape position. \nl
 
@@ -188,8 +188,8 @@ This setup can be seen in \autoref{SensorCamSetup.JPG}.
 \figx[0.1]{SensorCamSetup.JPG}{Setup for the camera test (With Background).}
 
 \subsubsection{Camera Test Results - Colours}\label{CamTestColours}
-In order to determine what colour can best be detected, the target wrapped with
-a piece of coloured paper, and is then placed at a distance of 2m from the
+In order to determine what colour can best be detected, the target is wrapped
+with a piece of coloured paper, and is then placed at a distance of 2m from the
 turret. The camera is then used to search for the specified colour. As explained
 in \autoref{SensTheoCam} this data consists of rectangular segments of the
 identified colour, and these segments sizes and colours. The quality of the
@@ -209,7 +209,7 @@ been manually observed and written down. The test was done twice, once with a
 background of a contrasting colour, and one without. The results from the first
 test can be seen in \autoref{table:CamTest1}.
 
-
+\dataTable{SensorCamTest1}{Data from test 1. (With background)}{CamTest1}
 
 From the data presented in \autoref{table:CamTest1} we can conclude the
 following:
