--- a/sections/Sensors/sensorTheory.tex
+++ b/sections/Sensors/sensorTheory.tex
@@ -39,7 +39,7 @@ received by the second hole. An image of this sensor can be seen in
 The delay between producing and receiving the sound wave is used to determine
 the distance to a given object.
 
-\figx[0.2]{UltrasoundPic.jpg}{The two ultrasonic sensors and the camera mounted
+\figx[0.2]{UltrasoundPic}{The two ultrasonic sensors and the camera mounted
 on the turret.}
 
 The described sensor is a standardized ultrasonic sensor from Lego NXT. The
