--- a/sections/Sensors/Sensors.tex
+++ b/sections/Sensors/Sensors.tex
@@ -7,6 +7,29 @@ movement. Because of the importance of correctly choosing and using these
 sensors, this chapter will be used to explain, analyze and test the different
 sensors which will be used throughout this project.
 
+\section{Sensor Choice}
+In the turret's ideal scenario and the following requirements in
+\autoref{ProblemDomain} it was determined that the turrets routine would consist
+of three main phases: scanning, tracking and shooting. These phases explained
+the requirements for the turret to be able to identify a target, measure the
+distance to the target and then shoot the target. For the purpose of this
+project, these phases will be solved using two main sensors: a camera and a
+distance sensor. The camera will be able to identify and track the target, and
+the distance sensor will measure the distance to said target. While there are a
+number of different sensors which can be classified as ``distance sensors'', we
+have chosen to use a standard NXT ultrasonic distance sensor. This was done due
+to the limited availability of sensors in stock, and the possiblity of waiting a
+long time for shipping new sensors. The contestants regarding the choice of
+camera was between a ``Microsoft Kinect'' and a NXTCam v4''. While the Kinect is
+vastly more powerful, it poses the problems of being a larger device which could
+not easily be placed on the turret, and it would need to be connected to a
+PC in order to translate its input into useful data. On the other hand the
+NXTCam is less powerful, but it is easily integrateable with the LEGO NXT
+platform and it can be placed on the turret itself. In the end, we chose to use
+the NXTCam, as the semesters goals are to teach us about designing around the
+limitations of embedded systems, and using a Kinect with the attatched PC would
+go against the idea of imposed limitations.
+
 \input{sections/Sensors/sensorTheory.tex} 
 \input{sections/Sensors/SensorTest.tex}
 
