--- a/sections/Sensors/Sensors.tex
+++ b/sections/Sensors/Sensors.tex
@@ -1,5 +1,5 @@
 \chapter{Sensors} \label{sensors}
-In order for \name to be able to percieve the world around it,
+In order for \name to be able to perceive the world around it,
 it needs to make use of external peripherals, which throughout this report will
 be known as sensors. These sensors are used to gather data about the various
 aspects of the surrounding environment such as, sound, visuals, temperature and
@@ -8,9 +8,9 @@ sensors, this chapter will be used to explain, analyze and test the different
 sensors which will be used throughout this project.
 
 \section{Sensor Choice}
-In the turret's ideal scenario and the following requirements in
+In the turret's ideal scenario and following the requirements in
 \autoref{ProblemDomain} it was determined that the turrets routine would consist
-of three main phases: scanning, tracking and shooting. These phases explained
+of three main phases: scanning, tracking and shooting. These phases explains
 the requirements for the turret to be able to identify a target, measure the
 distance to the target and then shoot the target. For the purpose of this
 project, these phases will be solved using two main sensors: a camera and a
@@ -30,7 +30,7 @@ the NXTCam, as the semesters goals are to teach us about designing around the
 limitations of embedded systems, and using a Kinect with the attatched PC would
 go against the idea of imposed limitations.
 
-\input{sections/Sensors/sensorTheory.tex} 
+\input{sections/Sensors/sensorTheory.tex}
 \input{sections/Sensors/SensorTest.tex}
 
 % \input{sections/Sensors/SensorUltrasonicTheory.tex}
