--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -1,10 +1,10 @@
-\chapter{Problem Domain}
+\chapter{Problem Domain}\label{ProblemDomain}
 As the project has no actual customer to set the requirements for the project,
 the product requirements will be based on the Ren\'e's proposed challenge and
 the educational goals for the semester.\nl
 
 In this chapter we construct an ideal scenario. This scenario is then analyzed in order to
-understand the problemdomain, and finally a summary is given.
+understand the problem domain, and finally a summary is given.
 
 \section{Ideal Scenario}
 Based on the initial problem it is now possible to describe how the turret is
