--- a/sections/Analyse/SystemDescription/Conclusion.tex
+++ b/sections/Analyse/SystemDescription/Conclusion.tex
@@ -1,4 +1,4 @@
-\section{Conclusion} 
+\section{Conclusion}\label{EmbConc}
 Now that the basic concepts of each aspect of the system have been explained, a summary will now be concluded in
 relation to the project.
 \subsection{Embedded}
