--- a/sections/Requirements/Requirements.tex
+++ b/sections/Requirements/Requirements.tex
@@ -1,4 +1,4 @@
-\section{Features and Requirements}
+\section{Features and Requirements}\label{FeatAndReq}
 In this section the features and requirements for this project will be formed,
 this is done based on the analysis in \autoref{PlatformC} and
 \autoref{SensorTest}.
