--- a/sections/Sensors/Sensors.tex
+++ b/sections/Sensors/Sensors.tex
@@ -7,7 +7,7 @@ movement. Because of the importance of correctly choosing and using these
 sensors, this chapter will be used to explain, analyze and test the different
 sensors which will be used throughout this project.
 
-\section{Sensor Choice} 
+\section{Sensor Choice}\label{SensorChoice}
 In the turret's ideal scenario and the following requirements in
 \autoref{ProblemDomain} it was determined that the turrets routine would consist
 of three main phases: scanning, tracking and shooting. These phases explained
