--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -123,4 +123,33 @@
   howpublished = {\url{https://www.arduino.cc/en/Guide/Introduction}}
 
 }
- 
+
+@MISC{NXTHistory,
+
+	title = {History of LEGO Robotics},
+	
+	note = {seen 02/11/2016},
+	
+	howpublished = {\url{https://www.lego.com/en-us/mindstorms/history}}
+	
+} 
+
+@MISC{NXTProgrammingLanguage,
+
+	title = {Nine alternative programming languages for LEGO MINDSTORMS},
+	
+	note = {seen 02/11/2016},
+	
+	howpublished = {\url{http://www.legoengineering.com/alternative-programming-languages/}}
+	
+}
+
+@MISC{ArduinoComponents,
+
+	title = {Components},
+	
+	note = {seen 02/11/2016},
+	
+	howpublished = {\url{https://store.arduino.cc/category/6}}
+	
+}  
