--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -9,6 +9,7 @@ First a brief description of the platform is provided. Based on a number of crit
 platform for the project will be chosen.
 
 \section{Evaluation Criteria}
+The comparison of the NXT and Arduino is based on the following criteria:
 
 \begin{itemize}
   \item Building - Since a physical turret will have to be constructed, in
@@ -19,16 +20,20 @@ platform for the project will be chosen.
   the time spent on things like soldering and integration of modules.
   \item I/O Ports - the number of available I/O Ports needs to be able to
   support a range of sensors and some motors.
+  \item Processing power - The proessing power needs to be taken into account
+  since it has an effect on the complexity of the program that can be developed
+  \item Availability - The availability of the platform is a factor since we
+  need to be able to get the componnts we need.
 \end{itemize}
 
 \section{Lego NXT Mindstorms}
-\fix{The Lego NXT Mindstorms is the successor to the first robotics-platform
-released by Lego the Robotics Invention System.}{Sales talk and history which
-if needed, needs a source} Although the NXT product-line contains the NXT 1.0,
-2.0 and the newer EV3 brick, in this project the EV3 will be disregarded since this is the platform being offered by the
-university. Regarding the NXT 1.0 and 2.0 brick, they are in fact identical from a
-hardware perspective and so we will consider them the same in the scope of this
-project \citep{NXTversions}\nl
+The Lego NXT Mindstorms is the successor to the first robotics-platform released
+by Lego the Robotics Invention System \citep{NXTHistory}. Although the NXT
+product-line contains the NXT 1.0, 2.0 and the newer EV3 brick, in this project
+the EV3 will be disregarded since this is the platform being offered by the
+university. Regarding the NXT 1.0 and 2.0 brick, they are in fact identical from
+a hardware perspective and so we will consider them the same in the scope of
+this project \citep{NXTversions}\nl
 
 \subsection{NXT Hardware specs}
 The Lego NXT Mindstorms kit consists of the NXT brick and a set of
@@ -43,9 +48,9 @@ of:
 
 The Lego NXT comes with the NXT-G programming environment which is a visual
 programming language for use with the NXT platform. There exist a variety of
-unofficial programming languages for the NXT, such as \michael{leJOS(Java),
-RobotC(C), nxt-Python(Python-duhh)} which makes it possible to write programs using the more popular programming
-languages \Source.
+unofficial programming languages for the NXT, such as leJOS(Java) and
+RobotC(C) which makes it possible to write programs using the more popular programming
+languages \citep{NXTProgrammingLanguage}.
 
 \begin{itemize}
   \item The external peripherals come programmed and assembled - all the user
@@ -63,7 +68,8 @@ evolved from offering simple 8-bit boards to offering a variety of different
 boards suiting different needs such as memory available, processing power,
 number of ports on the platform, etc . The arduino comes with its
 own programming language and an IDE \citep{ArduinoIntro}. A large number of modules are available for
-the arduino provided by 3rd party vendors, allowing the construction of diverse and complex systems \Source.
+the arduino provided by Arduino themselves and 3rd party vendors, allowing for
+construction of diverse and complex systems \citep{ArduinoComponents}.
 For the sake of comparison we will use the Arduino Uno, since this is the board being offered by
 the university.
 
@@ -75,10 +81,10 @@ the university.
 \end{itemize}
 
 \begin{itemize}
-	\item Due to the popularity of the arduino platform a large variety of 3rd
-	party peripherals are available for the platform \Source
+	\item a large variety of 3rd party peripherals are available for the platform
+	\citep{ArduinoComponents}.
 	\item Due to the popularity of the platform, there is a large community surrounding it,
-  providing a large amount of libraries for use with the modules \Source
+    providing a large amount of libraries for use with the modules 
 	\item If the library doesn't exist or contain the necesary functionality, it
 	will have to be written, thus time will have to be invested in order to make
 	it work
@@ -118,11 +124,11 @@ in conclusion a platform will be selected:
   configured to be used with a Lego NXT brick, thus resulting in a much simpler
   and streamlined process, being almost plug-and-play. The Arduino often
   requires more work in regards to integrating the modules with the board.
-  \item Customization - Based on this criteria we consider the Arduino to be
-  more flexible. Because of the more widespread use of the Arduino, the
-  likelyhood of someone already having constructed what you need is big. There
-  is also the option for tampering further with the modules with a breadboard
-  and the electrical components such as resistors, capacitors, etc.
+%   \item Customization - Based on this criteria we consider the Arduino to be
+%   more flexible. Because of the more widespread use of the Arduino, the
+%   likelyhood of someone already having constructed what you need is big. There
+%   is also the option for tampering further with the modules with a breadboard
+%   and the electrical components such as resistors, capacitors, etc.
   \item Building - In this regard the NXT wins big, since it can be combined
   with the entire Lego Technics system in constructing a technical platform.
   Constructing a turret with arduino would require us to manufacture the parts
