--- a/sections/Sensors/SensorTest.tex
+++ b/sections/Sensors/SensorTest.tex
@@ -171,7 +171,7 @@ the ultrasonic sensors.}{UltConeTestDat}
 % from the cannon.
 
 \subsection{Camera Sensor Test}\label{CamTest}%Will most likely need a better
-Testing the camera will consist of trying to answer two main questions. Namely
+Testing the camera aims at answering two main questions. Namely
 what colours can be easily recognized, and at what distance can the target be
 identified. As such, this subsection will consist of a test setup, the resulting
 data and the conclusions which can be drawn from this data.
@@ -194,12 +194,12 @@ turret. The camera is then used to search for the specified colour. As explained
 in \autoref{SensTheoCam} this data consists of rectangular segments of the
 identified colour, and these segments sizes and colours. The quality of the
 individual colours is determined by looking at two factors. The first factor is
-the consistancy of the recorded data, which is determined by the variance in the
+the consistency of the recorded data, which is determined by the variance in the
 data. The second factor is the cameras ability to keep recognizing the target
 at different distances.\nl
 
-The first test looks at the consistency of the recorded data. To do this we look
-at three main points. The maximum and minimum measured areas, the difference
+The first test investigates the consistency of the recorded data. To do this we
+look at three main points. The maximum and minimum measured areas, the difference
 between these points, and the average measured area. In addition each colour is
 given a rating based on the amount of frames where a colour was recognized.
 These ratings are: Ok (~70-100\%), bad (~40-69\%), very bad (~20-39\%) and Null
@@ -217,7 +217,7 @@ following:
   \item The blue and yellow colours can not be recognized
   \item The green colour has the hightest variance of 163 pixels
   \item The green colour has a low amount of frames with recognition
-  \item The red colour has the lowest variance of 19 pixels
+  \item The red colour has the lowest variation of 19 pixels
   \item Of the 'ok' colours, orange and red, orange has the largest measured
   average area.
 \end{itemize}
