Minor preliminary update to belief network
Cannot be read

--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -273,3 +273,6 @@ at time t+1 is conditionally independent from previous positions, actions and
 observations given the position and ation at time t. 
 
 \figx{BeliefNetwork}{A belief network for position of \name}
+
+%Although a HMM representation only shows few stages it can proceed
+% indefinitely.
