--- a/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
@@ -1,11 +1,11 @@
 \chapter{System Description}
-
-This semesters requires that the product of the project is an embedded system
-that must use techniques from the RTS and/or MI course. This dictates that we
-need an understanding of these concepts in order to fulfill them. In this
-chapter we will describe what an embedded system is, how real-time systems
-incorporate deadlines and schedules and examine what elements from machine
-intelligence could be used by an autonomous turret.
+As a part of this semester project the developed products must take the form of
+embedded systems, which makes use of the techiques taught in the 'Real Time
+Systems (RTS)' course, or the 'Machine Intelligence (MI)' course. In order to
+implement these techniques we will need to gain a deeper understanding of these
+concepts. As such, this chapter will be used to describe what an embedded system
+is, how real-time systems incorporate deadlines and schedules and examine what
+elements from machine intelligence could be used by an autonomous turret.
 
 \section{Embedded Systems}
 As explained by the embedded systems manufacturer BarrGroup
