--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -52,3 +52,6 @@ problem:
 capable of hitting a target.}
 \end{minipage}
 \end{center}
+
+Based on the namesake of this project 'Turret Systems 101', from here on out the
+product will be refered to as \namep.
