--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -112,9 +112,9 @@ in conclusion a platform will be selected:
 
 \begin{enumerate}
   \item I/O ports - The Arduino wins, since not only does it far surpass
-  the NXT in number of available ports, \fix{it also allows flexibility in
-  whether the ports are input or output and analog or digital.}{not true, if it
-  is it needs a source}
+  the NXT in number of available ports, it also allows flexibility in
+  whether the ports are input or output and also that it has both analog
+  and digital ports.
   \item Processing power - When comparing the two platforms, the NXT is
   superior, both in terms of clockspeed and memory.
   \item Availability - The Arduino offers a far wider selection of peripherals
