små rettelser i MI

--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -34,7 +34,7 @@ The representation is a piece of specific knowledge from the representation
 scheme. The representation scheme is used to make sure the individual
 representations are detailed and close to the problem, such that the necessary
 knowledge can be used to solve the problem \citep{MIBook}. Some examples of the
-knowledge that \name should have is: Knnowledge of the targets speed and
+knowledge that \name should have is: Knowledge of the targets speed and
 direction and knowledge of what direction it is facing. This knowledge, along
 with more, should be used in a way that makes it possible to compute an output.
 Whether this output is a solution or not, depends on what a sufficient solution
@@ -126,7 +126,7 @@ uncertainty as we not only need to predict the future position of the target,
 the sensors may provide noisy observations. We can thus already determine that
 \name will only be able to partially observe the state.\nl
 
-Effect uncertainty concerns how accuratly the agent can determine the resulting
+Effect uncertainty concerns how accurately the agent can determine the resulting
 state based on an action in its current state. There are two possibilities:
 \begin{itemize}
   \item \textbf{Deterministic} - The resulting state can be determined based on
@@ -190,7 +190,7 @@ designer thinks is suitable for the task.
   experiences to find a model that fits the data.
 \end{itemize}
 
-\name should make use of a given model, as it easy to determine and
+\name should make use of a given model, as it is easy to determine and
 calculate the various parts needed for projectile motion, see
 \autoref{ProjMotion}.
 
