--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -35,10 +35,11 @@ scheme. The representation scheme is used to make sure the individual
 representations are detailed and close to the problem, such that the necessary
 knowledge can be used to solve said problem \citep{MIBook}. Some examples of the
 knowledge that \name could have is: the targets speed, its direction and
-knowledge of where the turret itself is pointing. This knowledge, along with
-more, should be used in a way that makes it possible to compute an output.
-Whether this output is a solution or not, depends on what a sufficient solution
-is. Generally there are 4 different categories of solutions:
+knowledge of where the turret itself is pointing. When the turret has a
+sufficient amount of knowledge, it should be used in a way that makes it
+possible to compute an output. Whether this output is a solution or not, depends
+on what a sufficient solution is. Generally there are 4 different categories of
+solutions:
 
 \begin{itemize}
   \item \textbf{Optimal solution} - The best possible solution to the problem.
