--- a/sections/Requirements/ProblemStatement.tex
+++ b/sections/Requirements/ProblemStatement.tex
@@ -3,11 +3,14 @@
 Throughout the analysis several observations and conclusions were made in
 regards to the design and future implementation of the autonomous turret. In
 \autoref{ProblemDomain} it was stated that based on the turrets ideal scenario,
-it would need to implement feature that would allow it to sense its sorroundings. Based on
-requirements, it was chosen in \autoref{SensorChoice} that the turret would make
-use of two primary sensor types: a camera for tracking, and an ultrasonic distance sensor
-for determining the distance to the target.\nl
+it would need to implement a feature that would allow it to sense its
+surroundings. Due to this, it was chosen in \autoref{SensorChoice} that the
+turret would make use of two sensor types: a camera for tracking, and an
+ultrasonic sensor for determining the distance to the target.\nl
 
+
+% prob needs to be rewritten as to take the conclusion of system description
+% more into account
 In relation to the constraints imposed by the hardware limitations of
 embedded systems, it was determined in \autoref{EmbConc} that the turret should
 be:
@@ -20,12 +23,13 @@ be:
   dictates that it should react, e.g. shooting a target that moves into range. 
 \end{itemize}\nl
 
-In reagards to hitting a target in motion, \autoref{ProjPhys} was used to
-clarify the necessary physical theory for the project. This information was used to
-establish a formula for predicting where and when a projectile would hit a given
-location. This formula was tested in \autoref{AppendixDistTest} and can be used
-by the turret during its operation.\nl
+In regards to hitting a target in motion, \autoref{ProjPhys} was used to
+clarify the necessary theory for the project. This information is used to
+establish a formula for predicting where and when a projectile will hit. This
+formula was tested in \autoref{AppendixDistTest} and can be used by the turret
+during its operation.\nl
 
+%Are these the reasons behind our choice?
 In \autoref{PlatformC} it was chosen that the Lego NXT placform would be the
 better choice for this project. This choice was based on the following
 conclusions:
@@ -37,11 +41,18 @@ conclusions:
   spent on developing the software.
 \end{itemize}\nl
 
+
 Based on these observations and conclusions, we can establish the following
 problem statement:
+
 \begin{center}
+\colorbox{diff}{
+\begin{minipage}{0.8\linewidth}
 \textit{How can an autonomous turret be constructed, designed and implemented
 such that it is capable of hitting a moving target.}
+\end{minipage}
+}
 \end{center}
+
 Based on this problem statement a number of refined requirements have been made.
 These can be found below in \autoref{FeatAndReq}. 
